# metal2

./: .clang-format  CMakeLists.txt  LICENSE
.github/workflows/: cmake.yml
metal/: BinaryMath.hpp  BinaryOperator.hpp  Common.hpp  Constant.hpp  Core.hpp  Dual.hpp  Expression.hpp  Parameter.cpp  Parameter.hpp  ScalarGradient.hpp  SmallVector.hpp  UnaryMath.hpp  UnaryOperator.hpp  UnaryTrigon.hpp  Util.hpp  Variable.hpp
tests/: DualTest.cpp  ExpressionTest.cpp  Mock.hpp  ParameterTest.cpp  ScalarGradientTest.cpp  SmallVectorTest.cpp
